# sterio-vision-jetson-orin-nano

./: .gitignore  CLAUDE.md  README.md  export_engine.py  main.py  pyproject.toml
configs/: camera_body_extrinsics.yaml  pgie_yolo26n_config.txt  pgie_yolov8n_config.txt  stereo_calibration.yaml
deploy/: sterio-vision.service
nvdsinfer_custom_impl_yolo26/: Makefile  nvdsinfer_yolo26_parser.cpp
nvdsinfer_custom_impl_yolov8/: Makefile  nvdsinfer_yolov8_parser.cpp
src/: avoidance.py  calibration.py  config.py  debug_depth_view.py  debug_plot.py  distance.py  extrinsics.py  geolocation.py  mavlink_link.py  mission.py  obstacle_depth.py  pid.py  pipeline.py  probes.py  stereo_depth.py
