[project]
name = "object-detection-win"
version = "0.1.0"
description = "DeepStream-based real-time YOLOv8n detection and monocular/stereo distance estimation for dual IMX296 CSI cameras on Jetson Orin NX"
requires-python = ">=3.10"
dependencies = [
    "nvidia-cudss-cu12>=0.7.1.4",
    "onnx>=1.22.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.87",
]

[tool.uv]
# Never let uv fall back to downloading its own interpreter for this
# project -- the venv MUST be the system's Python 3.10 (see setup notes
# below), since that's the only interpreter ABI-compatible with the
# apt-installed `gi`/PyGObject and DeepStream's `pyds` module.
python-preference = "only-system"

# NOTES (see CLAUDE.md for full detail):
#
# - torch/torchvision/ultralytics/onnx are only required for the existing,
#   untouched .pt -> .engine export script. The DeepStream runtime app
#   (main.py) does NOT use them — it runs the prebuilt TensorRT engine
#   directly through gst-nvinfer.
#
# - Do NOT add `pygobject` (or `pycairo`) as a pip/uv dependency. Jetson/
#   DeepStream images already ship `python3-gi`, `python3-gi-cairo`,
#   `gir1.2-gst-1.0`, `gir1.2-gst-rtsp-server-1.0` at the OS level, built
#   against the system's cairo/gobject-introspection. Installing PyGObject
#   via pip instead tries to compile pycairo from source and fails unless
#   libcairo2-dev etc. are present -- and even if it built, it would be a
#   second, ABI-mismatched copy shadowing the working system one.
#
# - The venv MUST be created from the SYSTEM Python 3.10 with
#   --system-site-packages so the OS-provided `gi` module above is
#   importable (a uv-downloaded standalone interpreter, e.g. 3.12, cannot
#   load extension modules built for system 3.10):
#       rm -rf .venv   # if one was already created wrong by a bare `uv run`
#       uv venv --system-site-packages --python /usr/bin/python3.10
#       uv sync
#
# - DeepStream's `pyds` module is NOT on PyPI, and DS 7.1's on-device install
#   does NOT bundle the wheel either (confirmed: nothing under
#   /opt/nvidia/deepstream matches pyds*). It's published separately on the
#   deepstream_python_apps GitHub releases page. For DS 7.1 + Python 3.10 +
#   Jetson (aarch64), install the matching prebuilt wheel directly:
#       uv pip install https://github.com/NVIDIA-AI-IOT/deepstream_python_apps/releases/download/v1.2.0/pyds-1.2.0-cp310-cp310-linux_aarch64.whl
#   (source: https://github.com/NVIDIA-AI-IOT/deepstream_python_apps/releases/tag/v1.2.0 )
#
# - Sanity check before running main.py:
#       uv run python -c "import gi; gi.require_version('Gst','1.0'); \
#           gi.require_version('GstRtspServer','1.0'); \
#           from gi.repository import Gst, GstRtspServer; import pyds; print('ok')"
#   If GstRtspServer fails to import, install the OS package (not a uv
#   dependency): sudo apt install gir1.2-gst-rtsp-server-1.0
