[project]
name = "object-detection-win"
version = "0.1.0"
description = "DeepStream-based real-time YOLO26n detection and monocular/stereo distance estimation for dual IMX296 CSI cameras on Jetson Orin NX"
# Pinned to exactly 3.10.x, not ">=3.10": this project only ever runs on
# the system Python 3.10 on this Jetson (ABI compatibility with gi/pyds,
# see [tool.uv] below), and the pyds dependency's wheel only exists for
# cp310/linux_aarch64. A looser bound makes `uv sync` try to resolve a
# single lockfile valid for EVERY Python version + platform requires-python
# would technically allow (e.g. Python 3.14 on Windows) and fail outright,
# since pyds has no wheel there -- even though nothing runs this project
# there. See also [tool.uv] environments below, which does the same for
# the platform axis.
requires-python = ">=3.10,<3.11"
dependencies = [
    "onnx>=1.22.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "ultralytics>=8.4.87",
    "pymavlink>=2.4.40",
    # Already installed transitively via ultralytics on this device (no new
    # aarch64 risk, unlike open3d) -- declared explicitly now since
    # src/calibration.py genuinely depends on it, not just incidentally
    # available. Don't rely on a transitive dependency for something the
    # project actually needs.
    "opencv-python>=4.8.0",
    # For src/geolocation.py's camera->body->NED rotation chain. Mainstream
    # scientific-Python package with long-standing manylinux aarch64
    # wheels (unlike open3d) -- low risk, but genuinely UNVERIFIED on this
    # exact device since it's new with the geolocation feature; run
    # `uv sync` and confirm before trusting.
    "scipy>=1.11",
    # For src/geolocation.py's NED->geodetic (lat/lon/alt) step. Pure
    # Python, numpy-only, no compiled extensions -- zero platform-specific
    # wheel risk (unlike scipy/opencv), works identically on any
    # Python 3.10 install. Also new/unverified on this device, but the
    # "unverified" risk here is essentially nil given it's pure Python.
    "pymap3d>=3.0",
    # For configs/camera_body_extrinsics.yaml (src/extrinsics.py). Almost
    # certainly already present transitively (ultralytics uses YAML config
    # files internally) but declared explicitly now since extrinsics.py
    # genuinely depends on it, same reasoning as opencv-python above.
    "pyyaml>=6.0",
    # DeepStream Python bindings, direct wheel URL -- NOT on PyPI (see
    # deepstream_python_apps v1.2.0 release, matches DS 7.1 + cp310 +
    # aarch64). Declared here (not a manual `uv pip install <url>`) so
    # `uv sync` installs AND KEEPS this instead of removing it as an
    # untracked package every time -- that was happening before this was
    # added, since uv sync makes the venv match exactly what's declared.
    "pyds @ https://github.com/NVIDIA-AI-IOT/deepstream_python_apps/releases/download/v1.2.0/pyds-1.2.0-cp310-cp310-linux_aarch64.whl",
]

[tool.uv]
# Never let uv fall back to downloading its own interpreter for this
# project -- the venv MUST be the system's Python 3.10 (see setup notes
# below), since that's the only interpreter ABI-compatible with the
# apt-installed `gi`/PyGObject and DeepStream's `pyds` module.
python-preference = "only-system"

# Restricts uv's "universal" resolution to this one platform -- the
# platform-axis counterpart to pinning requires-python above. Without
# this, uv also tries to resolve for e.g. Windows/x86_64 (technically
# allowed by requires-python alone, since that only constrains the Python
# version) and fails the same way, since the pyds wheel is
# linux_aarch64-only. Nothing about this project ever runs anywhere else.
environments = ["sys_platform == 'linux' and platform_machine == 'aarch64'"]

[[tool.uv.index]]
# Jetson-native torch/torchvision builds (JetPack 6 / CUDA 12.6 / cp310 /
# linux_aarch64). The default PyPI index only has generic desktop-CUDA
# wheels for aarch64 (e.g. torch 2.12.1+cu130) which fail with
# `torch.cuda.is_available() == False` on Jetson's Tegra GPU + CUDA 12.6
# driver -- and any TensorRT engine exported with a CPU-only/wrong-CUDA
# torch either fails to build or won't deserialize on this device
# (`magicTag`/serialization-version mismatch).
name = "jetson-ai-lab"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126"
explicit = true

[tool.uv.sources]
# Pin ONLY torch/torchvision to the Jetson index; everything else still
# resolves from default PyPI.
torch = { index = "jetson-ai-lab" }
torchvision = { index = "jetson-ai-lab" }

# NOTES (see CLAUDE.md for full detail):
#
# - torch/torchvision/ultralytics/onnx are only required for the existing,
#   untouched .pt -> .engine export script. The DeepStream runtime app
#   (main.py) does NOT use them — it runs the prebuilt TensorRT engine
#   directly through gst-nvinfer.
#
# - Do NOT add `pygobject` (or `pycairo`) as a pip/uv dependency. Jetson/
#   DeepStream images already ship `python3-gi`, `python3-gi-cairo`,
#   `gir1.2-gst-1.0`, `gir1.2-gst-rtsp-server-1.0` at the OS level, built
#   against the system's cairo/gobject-introspection. Installing PyGObject
#   via pip instead tries to compile pycairo from source and fails unless
#   libcairo2-dev etc. are present -- and even if it built, it would be a
#   second, ABI-mismatched copy shadowing the working system one.
#
# - The venv MUST be created from the SYSTEM Python 3.10 with
#   --system-site-packages so the OS-provided `gi` module above is
#   importable (a uv-downloaded standalone interpreter, e.g. 3.12, cannot
#   load extension modules built for system 3.10):
#       rm -rf .venv   # if one was already created wrong by a bare `uv run`
#       uv venv --system-site-packages --python /usr/bin/python3.10
#       uv sync
#
# - DeepStream's `pyds` module is NOT on PyPI, and DS 7.1's on-device install
#   does NOT bundle the wheel either (confirmed: nothing under
#   /opt/nvidia/deepstream matches pyds*). It's declared above as a direct
#   wheel URL from the deepstream_python_apps GitHub releases page (DS 7.1 +
#   Python 3.10 + Jetson/aarch64) -- `uv sync` installs it like any other
#   dependency now. Do NOT install it via a separate manual
#   `uv pip install <url>` command instead of declaring it here: anything
#   not declared in `dependencies` gets treated as untracked and REMOVED
#   the next time `uv sync` runs (this happened once already).
#   (source: https://github.com/NVIDIA-AI-IOT/deepstream_python_apps/releases/tag/v1.2.0 )
#
# - Sanity check before running main.py:
#       uv run python -c "import gi; gi.require_version('Gst','1.0'); \
#           gi.require_version('GstRtspServer','1.0'); \
#           from gi.repository import Gst, GstRtspServer; import pyds; print('ok')"
#   If GstRtspServer fails to import, install the OS package (not a uv
#   dependency): sudo apt install gir1.2-gst-rtsp-server-1.0
#
# - Sanity check that torch actually sees the GPU (must print True) before
#   ever re-running the .pt -> .engine export on this device:
#       uv run python -c "import torch; print(torch.__version__, torch.cuda.is_available())"
#   If this was previously run before the [tool.uv.index]/[tool.uv.sources]
#   entries above existed, the venv may have the wrong (PyPI, non-Jetson)
#   torch cached -- force a clean re-resolve:
#       rm -f uv.lock && rm -rf .venv
#       uv venv --system-site-packages --python /usr/bin/python3.10
#       uv sync
#
# - The Jetson-native torch wheel above dynamically links system-wide
#   cuDSS (and possibly cuSPARSELt) at import time -- NOT the pip
#   nvidia-cudss-cu12 package (its .so lives inside site-packages, where
#   Jetson torch's loader won't find it). Install cuDSS as a SYSTEM package
#   via NVIDIA's local .deb installer for Linux / aarch64-jetson / Ubuntu
#   22.04 (https://developer.nvidia.com/cudss-downloads), then verify:
#       uv run python -c "import torch; print(torch.cuda.is_available())"
#   Do NOT add `nvidia-cudss-cu12` (or any other pip `nvidia-*-cu12`
#   package) back to `dependencies` above once the system package is
#   installed: it pulls in pip `nvidia-cublas-cu12`/`nvidia-cuda-nvrtc-cu12`
#   transitively, which are x86/SBSA-server builds, NOT Tegra-compatible.
#   PyTorch's official wheel-build convention makes torch's loader prefer
#   a sibling pip `nvidia/*/lib` package over the correct system Tegra
#   library when both are present (they share the same `.so.12` name) --
#   this silently breaks CUDA math calls with errors like
#   `CUBLAS_STATUS_ALLOC_FAILED` even though `torch.cuda.is_available()`
#   still reports True (that check doesn't exercise cuBLAS itself).
#
# - TensorRT engines are locked to the exact TensorRT version + GPU
#   architecture they were built on -- they are NOT portable across
#   machines, even ones running the "same" TensorRT version number. If
#   yolo26n.engine was exported anywhere other than this exact Jetson (or
#   another Orin-family board on the same TensorRT 10.3.0.30), nvinfer will
#   fail to deserialize it. Re-run the export directly on this device (same
#   export call as always: format='engine', device='0', half=True,
#   workspace=4) via export_engine.py, which adds diagnostics (torch/CUDA/
#   TensorRT versions, free GPU memory, clear failure messages) around that
#   unchanged call and copies the result into models/ for you:
#       uv run python export_engine.py
#
# - Before adding any new dependency here, check CLAUDE.md's "Python package
#   dependencies" table -- it tracks the version actually resolved on this
#   device plus aarch64/Jetson-specific caveats for everything currently
#   installed (and one rejected package, open3d, with why). Update that
#   table whenever a package is added via uv, so it doesn't get
#   rediscovered from scratch next time.
